fix nav on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,8 @@ nav {
 }
 
 .nav__logo {
+  top: 50%;
+  transform: translateY(-50%);
   color: var(--light-white);
   transition: 0.3s;
   position: absolute;
@@ -76,7 +78,7 @@ nav {
   top: 50%;
   transform: translateY(-50%);
   width: 22px;
-  height: 12px;
+  height: 22px;
   cursor: pointer;
 }
 
@@ -84,46 +86,36 @@ nav {
 .nav__burger-icon::after {
   content: '';
   display: block;
-  width: 22px;
+  width: 100%;;
   height: 2px;
   border-radius: 2px;
   background-color: var(--light-white);
   position: absolute;
   left: 0;
-  transition: transform .3s, top .3s;
+  transition: .2s;
 }
 
 .nav__burger-icon::before {
-  top: -5px;
+  top: 4px;
 }
 
 .nav__burger-icon::after  {
-  top:  5px;
+  top: 14px;
 }
 
 .nav__burger-icon.active::before {
-  top: 0;
+  top: 10px;
   transform: rotate(45deg);
 }
 
 .nav__burger-icon.active::after {
-  top: 0;
+  top: 10px;
   transform: rotate(-45deg);
 }
 
-.navbar--mobile {
+/* .navbar--mobile {
   display: none;
-}
-
-.nav__items--mobile {
-  display: none;
-  flex-direction: column;
-  position: absolute;
-  top: 80px;
-  left: 0;
-  width: 100%;
-  padding: 1em 0;
-  background-color: var(--bg-color);
+  z-index: 100;
 }
 
 .nav__items--mobile .nav__items--open {
@@ -132,9 +124,22 @@ nav {
 
 .nav__items--mobile .nav__item {
   padding: 1em 2em;
-}
+} */
 
 /* HEADER */
+
+.shader-wrapper {
+  animation: fadeIn 1.5s ease-in forwards;
+  mask-image: linear-gradient(to bottom, 
+    rgba(0, 0, 0, 1) 75%, 
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
 
 .header {
   display: flex;
@@ -152,26 +157,54 @@ nav {
   background-color: transparent;
 }
 
+.header__content {
+  z-index: 2;
+  transform: translateY(-100px);
+  width: 100%;
+  height: 250px;
+}
+
 .header__heading {
-  font-size: 4.8em;
+  font-size: 6.2em;
+  padding: 0.5em;
 }
 
 .header__text {
+  position: relative;
+  bottom: 0px;
   font-size: 2.4em;
 }
 
 /* MEDIA QUERIES */
 
 @media (max-width: 768px) {
-  .navbar {
-    display: none;        
-  }
-
-  .navbar--mobile {
-    display: flex;        /* show burger nav */
-  }
+  
+  /* NAV */
 
   .nav__burger-icon {
-    display: block;       /* show burger icon */
+    display: block;
   }
+
+  .nav__items {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  top: 80px;
+  left: 0;
+  width: 100%;
+  padding: 1em 0;
+  text-align: right;
+  z-index: 100;
+  }
+
+  .nav__item {
+    display: block;
+    padding: 0.5em 1em 0.5em 1em;
+  }
+
+  .active ~ .nav__items {
+    display: block;
+  }
+
+
 }
